Quorum3/Library/Tests/Actions/Pass/Return2ActionsNumToVar.quorum
class Main
    action Main
        number a = -2
        number x = 0
        x = bar(foo(a))
        output x
    end

    action foo (number a) returns number
        a = a * -1
        return a
    end

    action bar(number a) returns number
        a = a * 10
        return a
    end
end