Quorum3/Library/Tests/Actions/Fail/InvalidActionSymbol2.quorum
action Main
    
end

action !foo
    x = 1
end

